# VanillaLogger

./: README.md  meson.build
src/: vanilla-logger.h
