project('com.github.jeysonflores.vanillalogger', ['cpp', 'c'], 
          version: '0.0.0',
    meson_version: '>= 0.50.0',
  default_options: [ 'warning_level=2',
                     'cpp_std=gnu++17',
                   ],
)

install_headers('src/vanilla-logger.h', subdir : 'vanilla-logger') # -> include/projname/header.h